deployment/digitalocean/ingress/call-center-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: call-center-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    
spec:
  ingressClassName: nginx
  rules:
  - host: call-center.cheap-taxi.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: callcenter-service
            port:
              number: 80
